(4.2.7p63) 2010/10/13 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1080] from 4.2.6p3-RC3: ntpd on ipv6 routers very chatty.
* Documentation nit cleanup.
* Documentation updates from Dave Mills.
(4.2.7p62) 2010/10/12 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 750] from 4.2.6p3-RC3: Non-existing device causes coredump with 
  RIPE-NCC driver.
* [Bug 1567] from 4.2.6p3-RC3: Support Arbiter 1093C Satellite Clock on
  Windows.
* [Bug 1581] from 4.2.6p3-RC3: printf format string mismatch leftover.
* [Bug 1659] from 4.2.6p3-RC3: Support Truetime Satellite Clocks on
  Windows. 
* [Bug 1660] from 4.2.6p3-RC3: On some systems, test is in /usr/bin, not
  /bin. 
* [Bug 1661] from 4.2.6p3-RC3: Re-indent refclock_ripencc.c.
* Lose peer_count from ntp_peer.c and ntp_proto.c (Dave Mills).
* Documentation updates from Dave Mills.
(4.2.7p61) 2010/10/06 Released by Harlan Stenn <stenn@ntp.org>
* Documentation and code cleanup from Dave Mills. No more NTP_MAXASSOC.
(4.2.7p60) 2010/10/04 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
(4.2.7p59) 2010/10/02 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* Variable name cleanup from Dave Mills.
* [Bug 1657] darwin needs res_9_init, not res_init.
(4.2.7p58) 2010/09/30 Released by Harlan Stenn <stenn@ntp.org>
* Clock select bugfix from Dave Mills.
* [Bug 1554] peer may stay selected as system peer after becoming
  unreachable.
* [Bug 1644] from 4.2.6p3-RC3: cvo.sh should use lsb_release to identify
  linux distros.
* [Bug 1646] ntpd crashes with relative path to logfile.
(4.2.7p57) 2010/09/27 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
(4.2.7p56) 2010/09/25 Released by Harlan Stenn <stenn@ntp.org>
* Clock combining algorithm improvements from Dave Mills.
* Documentation updates from Dave Mills.
* [Bug 1642] ntpdsim can't find simulate block in config file.