@@ -11,7 +11,7 @@
 <img src="pic/alice47.gif" alt="gif" align="left"><a href="http://www.eecis.udel.edu/%7emills/pictures.html">from <i>Alice's Adventures in Wonderland</i>, Lewis Carroll</a>
 <p>Caterpillar knows all the error codes, which is more than most of us do.</p>
 <p>Last update:
-  <!-- #BeginDate format:En2m -->10-Sep-2010  0:20<!-- #EndDate -->
+  <!-- #BeginDate format:En2m -->14-Oct-2010  3:34<!-- #EndDate -->
   UTC</p>
 <br clear="left">
 <h4>Related Links</h4>
@@ -544,7 +544,7 @@
     <td><tt>0400</tt></td>
     <td>TEST11</td>
     <td><tt>peer_dist</tt></td>
-    <td>peer distance exceeded</td>
+    <td>peer distance threshold exceeded</td>
   </tr>
   <tr>
     <td><tt>0800</tt></td>
@@ -556,7 +556,7 @@
     <td><tt>1000</tt></td>
     <td>TEST13</td>
     <td><tt>peer_unreach</tt></td>
-    <td>peer unreachable</td>
+    <td>peer unreachable or nonselectable</td>
   </tr>
 </table>
 <h4 id="kiss">Kiss Codes</h4>
