@@ -1,3 +1,4 @@
+* Documentation updates from Dave Mills.
 (4.2.7p63) 2010/10/13 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 1080] from 4.2.6p3-RC3: ntpd on ipv6 routers very chatty.
 * Documentation nit cleanup.
